# DataManipulation

./: .dockerignore  .env.docker  .env.example  Dockerfile  IMPROVEMENTS.md  Makefile  README.md  assignment_test_requests.py  dev.db  docker-compose.prod.yml  docker-compose.yml  init.sql  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  sample_transactions.csv  test_api.py  test_results.json
app/: config.py  logging.py  main.py
app/api/: deps.py
app/api/routers/: health.py  import_transactions.py  me.py  metrics.py  transactions.py
app/db/: base.py  init_db.py  models.py  session.py  tenancy.py  tenant_filter.py
app/middleware/: exceptions.py  logging.py
app/schemas/: metrics.py  transactions.py
app/services/: metrics.py  transactions.py
app/utils/: csv_ingest.py
tests/: conftest.py  test_metrics.py  test_metrics_defaults.py  test_tenancy_header.py  test_tenant_write_guard.py  test_transactions.py
tests/data/: transactions.csv
